utilities/stringify_attr/src/tests/derive/union.stderr
error: Unions are not supported
  --> $DIR/union.rs:19:5
   |
19 |     union A {}
   |     ^^^^^
